# Indium

./: CMakeLists.txt  LICENSE.txt  README.md  porcupinetree.sln
.VSCodeCounter/2025-02-03_00-11-38/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-02-04_19-36-36/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
cmake/: CMakeLists.txt
pch/: pch.h
porcupinetree/: Context.hpp  Date.cpp  Date.hpp  FilePath.cpp  FilePath.hpp  ID3.hpp  asset.cpp  asset.hpp  balloon.cpp  balloon.hpp  binary_dump.cpp  binary_dump.hpp  bitmap.cpp  bitmap.hpp  bitmapRender.cpp  bitmapRender.hpp  bitstream.cpp  bitstream.hpp  bytestream.cpp  bytestream.hpp  bytestream_OLD.cpp  bytestream_OLD.hpp  crc.cpp  crc.hpp  error.cpp  filewrite.cpp  filewrite.hpp  h264.cpp  h264.hpp  jparse.cpp  jparse.hpp  linked_map.hpp  main.cpp  measure.hpp  memcpy.cpp  memcpy.hpp  mp3.cpp  mp3.hpp  msutil.hpp  nal.cpp  (+13 more)
porcupinetree/.VSCodeCounter/2025-01-15_21-16-53/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
porcupinetree/.VSCodeCounter/2025-01-15_21-20-56/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
porcupinetree/.VSCodeCounter/2025-01-22_19-44-08/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
